--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,48 @@
-# Node.js
+# Node modules
 node_modules/
+
+# Build output
+.next/
+out/
+dist/
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-.next/
-out/
-dist/
-.cache/
-
-# Local environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-logs
 *.log
-*.log.*
-log.txt
+
+# Environment variables
+.env
+.env*.local
 
 # OS generated files
 .DS_Store
 Thumbs.db
 
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.pdb
-*.egg
-*.egg-info/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.manifest
-*.spec
-
-# FastAPI venv
-python-image-api/venv/
-python-image-api/.venv/
-venv/
-.venv/
-
-# Cache & compiled
-.pytest_cache/
-migrations/
-*.sqlite3
-
-# IDE & editor configs
+# IDE/editor settings
 .vscode/
 .idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
 
-# Uploaded/generated images
-public/generated/
-python-image-api/generated/
+# Typescript build cache
+*.tsbuildinfo
 
 # Temporary files
-tmp/
-temp/
 *.tmp
-*.bak
+*.swp
+
+# Dependency lock files (optional: keep one)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Generated images folder
+public/generated/
+
+# Coverage output
+coverage/
+
+# Local data storage
+*.sqlite
+*.db
